tests/transpiler/x/rs/in_operator.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:54 +0700
fn main() {
    let xs: Vec<i64> = vec![1, 2, 3];
    println!("{}", (2 in xs));
    println!("{}", !(5 in xs));
}
